--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+
+
+<div id="overlay">
+
+
+
+
+    <a class="button-style" onclick="hideOverlay(); playMusic()">
+      <i class="fas fa-arrow-right"></i>
+      Voir l'invitation
+    </a>
+
+</div>
+
+
 <section class="image-section">
   <img src="img/tephiline.jpg" alt="Tephiline">
 </section>
