--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 
 
 
-    <a class="button-style" onclick="hideOverlay(); playMusic()">
+    <a class="button" onclick="hideOverlay(); playMusic()">
       <i class="fas fa-arrow-right"></i>
       Voir l'invitation
     </a>
 
 </div>
 
-
 <section class="image-section">
-  <img src="img/tephiline.jpg" alt="Tephiline">
+  <img src="img/samuelPic.jpg" alt="Samuel">
+</section>
+
+<hr>
+<section class="image-section">
+  <img src="img/tephilineCut.jpg" alt="Tephiline">
 </section>
 
 <hr>
@@ -57,7 +61,7 @@
 </div>
 <hr>
 <section class="image-section">
-  <img src="img/chabbatComplet.jpg" alt="Chabbat Complet">
+  <img src="img/chabbatCompletCut.jpg" alt="Chabbat Complet">
 </section>
 
 
