--- a/index.html
+++ b/index.html
@@ -8,30 +8,25 @@
 </head>
 <body>
 
-
-
 <div id="overlay">
-
-
-
-
-    <a class="button" onclick="hideOverlay(); playMusic()">
-      <i class="fas fa-arrow-right"></i>
-      Voir l'invitation
-    </a>
-
+  <a class="button" onclick="hideOverlay(); playMusic()">
+    <i class="fas fa-arrow-right"></i>
+    Voir l'invitation
+  </a>
 </div>
 
 <section class="image-section">
-  <img src="img/samuelPic.jpg" alt="Samuel">
+  <!-- Cette section est vide, l'image est maintenant en arrière-plan -->
 </section>
 
 <hr>
+
 <section class="image-section">
-  <img src="img/tephilineCut.jpg" alt="Tephiline">
+  <!-- L'image de tephilline est maintenant en arrière-plan -->
 </section>
 
 <hr>
+
 <div id="saveTheDate">
   <a class="textSaveTheDate"><b>Save The Date</b></a>
   <a class="textSaveTheDate" style="font-size: 4.5vw; font-family:'DMSerif' , sans-serif ">4 Juillet 2025</a>
@@ -59,13 +54,12 @@
     </div>
   </div>
 </div>
+
 <hr>
+
 <section class="image-section">
-  <img src="img/chabbatCompletCut.jpg" alt="Chabbat Complet">
+  <!-- L'image de Chabbat est maintenant en arrière-plan -->
 </section>
-
-
-
 
 <script src="js/hideOverlay.js"></script>
 <script src="js/countDown.js"></script>
