--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
 <hr>
 
-<section class="image-section">
+<section class="image-section" style="  background-image: url('img/tephilineCut.jpg'), linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)); /* Image + dégradé sombre */
+">
   <!-- L'image de Chabbat est maintenant en arrière-plan -->
 </section>
 
