--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
   </div>
 </section>
 
+<audio id="myAudio" src="/music/BirkatHacohnim.mp3"></audio>
+
 
 <script src="js/hideOverlay.js"></script>
 <script src="js/countDown.js"></script>
