--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <img src="img/chabbatCompletCut.jpg" alt="Chabbat Complet">
 </section>
 
-<<section class="rsvp-section">
+<section class="rsvp-section">
   <div class="rsvp-container">
     <h1>Confirmation de présence</h1>
     <form id="rsvp-form" method="post">
