--- a/index.html
+++ b/index.html
@@ -66,12 +66,9 @@
 
 <section class="rsvp-section">
   <div class="rsvp-container">
-    <h1>Confirmation de présence</h1>
+    <h1 style="font-family: 'pinyon',sans-serif">Réponse</h1>
     <form id="rsvp-form" method="post">
 
-      <!-- Participation aux événements + Infos personnelles -->
-      <fieldset class="rsvp-fieldset">
-        <legend class="rsvp-legend">Participation aux événements</legend>
 
         <!-- Nom & Prénom -->
         <div class="rsvp-input-group">
@@ -108,7 +105,6 @@
           <textarea id="message" name="message" class="rsvp-message" placeholder="Mazal Tov Samuel !!" rows="4"></textarea>
         </div>
 
-      </fieldset>
 
       <button type="submit" class="button">Envoyer</button>
     </form>
