--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <section class="rsvp-section">
   <div class="rsvp-container">
-    <h1 style="font-family: 'pinyon',sans-serif; font-size: 40px; color:#1a237e ">Réponse</h1>
+    <h1 style="font-family: 'pinyon',sans-serif; font-size: 50px; color:#c48e1b ">Réponse</h1>
     <form id="rsvp-form" method="post">
 
 
