--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <input type="number" name="nb-samedi" class="rsvp-number" placeholder="Nombre de personnes" disabled>
       </div>
 
-      <!-- Champ Message aux mariés -->
+      <!-- Champ Message -->
       <div class="rsvp-message-box">
         <label class="rsvp-label" for="message">Message à Samuel :</label>
         <textarea id="message" name="message" class="rsvp-message" placeholder="Mazal Tov Samuel !!" rows="4"></textarea>
