--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="overlay">
 
 
-
+  <img src="/img/logoSD.png" style="width: 80%">
 
     <a class="button" onclick="hideOverlay(); playMusic()">
       <i class="fas fa-arrow-right"></i>
