--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
 </div>
 
 
+<div id="premierPartie">
+  <div id="textPremierePartie">
+    <div style="margin-bottom: 6vw"></div>
+
+
+
+
+
+    <!--            <a class="annonce" style="font-size: 5.3vw">Une très grande pensée </a>-->
+    <!--            <a class="annonce" style="font-size: 5.3vw">pour ceux qui nous ont quittés</a>-->
+
+    <!--            <a class="annonce" style="font-size: 5.3vw;"> et qui seront toujours dans nos coeurs.</a>-->
+
+
+
+  </div>
+  <a href="#secondePartie"> <img src="/img/flecheBas.png" style="width: 3vw; height: auto; margin-bottom: 10vw"
+                                 class="btnLink"></a>
+  <br>
+  <br>
+</div>
+
+
 
 <section class="image-section">
   <img src="img/samuelPic.jpg" alt="Samuel">
