--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Affichage des Images</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 
@@ -27,34 +29,17 @@
   <div id="textPremierePartie">
     <div style="margin-bottom: 6vw"></div>
 
-
-
-
-
-    <!--            <a class="annonce" style="font-size: 5.3vw">Une très grande pensée </a>-->
-    <!--            <a class="annonce" style="font-size: 5.3vw">pour ceux qui nous ont quittés</a>-->
-
-    <!--            <a class="annonce" style="font-size: 5.3vw;"> et qui seront toujours dans nos coeurs.</a>-->
-
-
+    <h1 style="font-family: 'Great Vibes', sans-serif ; color: white ; font-size: 50px">Bar Mitsvah <br> Samuel</h1>
 
   </div>
-  <a href="#secondePartie"> <img src="/img/flecheBas.png" style="width: 3vw; height: auto; margin-bottom: 10vw"
-                                 class="btnLink"></a>
   <br>
   <br>
+  <a href="#saveTheDate" style="text-decoration: none; color: white; font-size: 50px"><i  class="fa-solid fa-angles-down"></i></a>
 </div>
 
 
 
-<section class="image-section">
-  <img src="img/samuelPic.jpg" alt="Samuel">
-</section>
 
-<hr>
-<section class="image-section">
-  <img src="img/tephilineCut.jpg" alt="Tephiline">
-</section>
 
 <hr>
 <div id="saveTheDate">
@@ -84,6 +69,16 @@
     </div>
   </div>
 </div>
+<hr>
+<section class="image-section">
+  <img src="img/samuelPic.jpg" alt="Samuel">
+</section>
+
+<hr>
+<section class="image-section">
+  <img src="img/tephilineCut.jpg" alt="Tephiline">
+</section>
+
 <hr>
 <section class="image-section">
   <img src="img/chabbatCompletCut.jpg" alt="Chabbat Complet">
