--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
   <div id="textPremierePartie">
     <div style="margin-bottom: 6vw"></div>
 
-    <h1 style="font-family: 'Great Vibes', sans-serif ; color: white ; font-size: 60px">Bar Mitsvah <br> Samuel</h1>
+    <h1 style="font-family: 'Great Vibes', sans-serif ; color: white ; font-size: 60px;  text-shadow: 2px 2px 5px black; /* Ombre noire */
+">Bar Mitsvah <br> Samuel</h1>
 
   </div>
   <br>
   <br>
-  <a href="#saveTheDate" style="text-decoration: none; color: white; font-size: 50px"><i  class="fa-solid fa-angles-down"></i></a>
+  <a href="#saveTheDate" style="text-decoration: none; color: white; font-size: 50px;  text-shadow: 2px 2px 5px black; /* Ombre noire */
+"><i  class="fa-solid fa-angles-down"></i></a>
 </div>
 
 
