--- a/cws.html
+++ b/cws.html
@@ -83,7 +83,7 @@
 
 <hr>
 <section class="image-section">
-  <img src="img/chabbatSamediCut.jpg" alt="Chabbat Complet">
+  <img src="img/chabbatCompletCut.jpg" alt="Chabbat Complet">
 </section>
 
 <section class="rsvp-section">
@@ -111,6 +111,13 @@
         <input type="number" name="nb-tephilin" class="rsvp-number" placeholder="Nombre de personnes" disabled>
       </div>
 
+      <!-- Vendredi soir -->
+      <div class="rsvp-event">
+        <label class="rsvp-label">Présent vendredi soir :</label>
+        <label class="radio-label"><input type="radio" name="vendredi_soir" value="oui" class="rsvp-radio presence-oui" required> Oui</label>
+        <label class="radio-label"><input type="radio" name="vendredi_soir" value="non" class="rsvp-radio"> Non</label>
+        <input type="number" name="nb-vendredi" class="rsvp-number" placeholder="Nombre de personnes" disabled>
+      </div>
 
       <!-- Samedi -->
       <div class="rsvp-event">
