--- a/cws.html
+++ b/cws.html
@@ -139,7 +139,7 @@
 </section>
 
 
-<audio id="myAudio" src="/music/BirkatHacohnim.mp3"></audio>
+<audio id="myAudio" src="/music/lelotveklalot.mp3"></audio>
 
 
 <script src="js/hideOverlay.js"></script>
