--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+
+  <!-- Balises Open Graph -->
+  <meta property="og:title" content="Bar-Mitsvah Samuel">
+  <meta property="og:description" content="Bar-Mitsvah de Samuel, rejoignez-nous pour célébrer cet événement spécial.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://bm-samuel-david.vercel.app/img/previewSD.png"> <!-- Remplacez par le chemin complet de votre image -->
+  <meta property="og:image:alt" content="Logo">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200"> <!-- Remplacez par la largeur de votre image -->
+  <meta property="og:image:height" content="630"> <!-- Remplacez par la hauteur de votre image -->
+
+  <link rel="icon" href="/img/previewSD.png" sizes="any">
+  <link rel="icon" href="/img/previewSD.png" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/img/previewSD.png">
+
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#fafafa">
+
+
 </head>
 <body>
 
