--- a/cws.html
+++ b/cws.html
@@ -157,7 +157,7 @@
 </section>
 
 
-<audio id="myAudio" src="/music/lelotveklalot.mp3"></audio>
+<audio id="myAudio" src="/music/etRikod.mp3"></audio>
 
 
 <script src="js/hideOverlay.js"></script>
